<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.techbytes.qa</groupId>
    <artifactId>java-playwright</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>
    <name>QA Selenium Project - Herokuapp</name>
    <description>Professional QA Selenium Project - Herokuapp</description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <exec.mainClass>com.techbytes.qa</exec.mainClass>
        <lombok.version>1.18.42</lombok.version>
        <logback.version>1.5.25</logback.version>
        <slf4j.version>2.0.17</slf4j.version>
        <junit.version>4.13.2</junit.version>
        <testng.version>7.11.0</testng.version>
        <selenium.version>4.39.0</selenium.version>
        <webdrivermanager.version>6.1.1</webdrivermanager.version>
        <apachecommons.version>1.14.1</apachecommons.version>
        <apachepoi.version>5.5.1</apachepoi.version>
        <allure.version>2.32.0</allure.version>
        <jweaver.version>1.9.25.1</jweaver.version>
        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
        <allure-maven-plugin.version>2.17.0</allure-maven-plugin.version>
    </properties>
    <dependencies>
        
        <!-- lombok to automatically generate boilerplate code -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        
        <!-- LogBack for recording logs -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
            <type>jar</type>
        </dependency>
        
        <!-- JUnit framework -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>
        
        <!-- TestNg framework -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <type>jar</type>
        </dependency>
        
        <!-- Selenium for automating test of WebSite -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        
        <!-- WebDriver Manager -->
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
            <type>jar</type>
        </dependency>
        
        <!-- CSV Parsing -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>${apachecommons.version}</version>
            <type>jar</type>
        </dependency>
        
        <!-- Excel Parsing -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>${apachepoi.version}</version>
            <type>jar</type>
        </dependency>
        
        <!-- Allure Reporting -->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure.version}</version>
            <type>jar</type>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            
            <!-- Surefire Plugin for Allure Reporting -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>testng.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <argLine>
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${jweaver.version}/aspectjweaver-${jweaver.version}.jar"
                    </argLine>
                    <systemPropertyVariables>
                        Forces results into target instead of project root 
                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                    </systemPropertyVariables>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${jweaver.version}</version>
                        <scope>runtime</scope>
                    </dependency>
                </dependencies>
            </plugin>

            <!-- Allure Reporting Plugin -->
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure-maven-plugin.version}</version>
            </plugin>
            
            <!-- Maven Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>